# bazel_go_version_stamping

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE.md  MODULE.bazel  README.md  go.mod  main.go
pkg/version/: BUILD.bazel  template.go
scripts/git/: status.sh
