load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:exclude bazel-*
# gazelle:exclude binding
# gazelle:exclude deployment
# gazelle:exclude dist
# gazelle:exclude security
# gazelle:exclude vendor
gazelle(name = "gazelle")

# make sure that others can import either using the import or go_default_library naming conventions
# gazelle:go_naming_convention import_alias

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./bazel-*",
        "./git/*",
        "./vendor/*",
    ],
    lint_mode = "warn",
    lint_warnings = ["all"],
    mode = "check",
    verbose = True,
)

go_binary(
    name = "app",
    embed = [":go_version_stamping"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_version_stamping",
    srcs = ["main.go"],
    importpath = "github.com/abitofhelp/bazel_go_version_stamping",
    visibility = ["//visibility:private"],
    x_defs = {"github.com/abitofhelp/bazel_go_version_stamping/pkg/version/template.Version": "{STABLE_GIT_COMMIT}"},
    deps = ["//pkg/version"],
)
