module(
    name = "bazel_go_version_stamping",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(
    name = "aspect_bazel_lib",
    version = "2.1.0",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.3.3",
    dev_dependency = True,
)

bazel_dep(
    name = "rules_go",
    version = "0.43.0",
    dev_dependency = True,
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(version = "1.21.5")

# Register the Go SDK installed on the host.
go_sdk.host()

bazel_dep(
    name = "gazelle",
    version = "0.34.0",
    dev_dependency = True,
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
)
