load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "version",
    srcs = ["template.go"],
    importpath = "github.com/abitofhelp/bazel_go_version_stamping/pkg/version",
    visibility = ["//visibility:public"],
    x_defs = {"Version": "{STABLE_GIT_COMMIT}"},
)

alias(
    name = "go_default_library",
    actual = ":version",
    visibility = ["//visibility:public"],
)
